# pixelguard

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  supervisor.conf
examples/: mode_detection_example.py
src/pixelguard/: __init__.py  server.py  streamlit_app.py
src/pixelguard/analyzers/: batch.py  image.py
src/pixelguard/cli/: commands.py  main.py
src/pixelguard/core/: config.py  exceptions.py  models.py
src/pixelguard/detectors/: __init__.py  background.py  base.py  border_fill.py  composite.py  ratio.py  uniform_color.py
src/pixelguard/reporters/: base.py  console_reporter.py  csv_reporter.py  json_reporter.py
src/pixelguard/utils/: file_finder.py  image_loader.py  image_utils.py  logger.py
tests/: conftest.py  test_background_detector.py  test_cli_commands.py  test_custom_config.py  test_detectors.py  test_mode_detection.py  test_pixelguard.py  test_ratio_detector.py  test_server.py  test_streamlit_app.py  test_webp_support.py
